--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,7 @@ add_library(grbl INTERFACE)
 
 target_sources(grbl INTERFACE
  ${CMAKE_CURRENT_LIST_DIR}/grbllib.c
+ ${CMAKE_CURRENT_LIST_DIR}/motion.c
  ${CMAKE_CURRENT_LIST_DIR}/coolant_control.c
  ${CMAKE_CURRENT_LIST_DIR}/nvs_buffer.c
  ${CMAKE_CURRENT_LIST_DIR}/gcode.c
